--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section a {
 }
 #bcreate {
   padding: 12px 0;
-  background: #;
+  background:transparent;
   height: 42px;
   border-color: #428ce7;
   border:solid 1px #428ce7;
