--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f0f2f5;
+  background-color: #eef7fe;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -41,6 +41,7 @@ select{
   font-size: 13px;
   border:none;
   outline: none;
+  background:transparent;
 }
 .input-box .input-field {
   width: 100%;
